# Gemini-MCP-Engine

./: .gitignore  README.md  main.py  pyproject.toml
mcp/: client.py  server.py
