[project]
name = "gemini-mcp-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asynco>=0.0.5",
    "fastapi>=0.124.4",
    "fastapi-mcp>=0.4.0",
    "fastmcp>=2.14.0",
    "genai>=2.1.0",
    "google-genai>=1.55.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
